# sparkmc

./: .gitignore  CONTRIBUTING.md  GITHUB_PUBLISH.md  LICENSE  README.md
.github/workflows/: build.yml
java/: README.md  build.gradle.kts  settings.gradle.kts
java/src/main/java/sparkmc/: ConsoleApp.java  JavaRuntime.java  LaunchPlan.java  Main.java  ProcessGuard.java  Setup.java  Updater.java  Wizard.java
java/src/main/java/sparkmc/model/: Core.java  FlagPreset.java  LaunchTarget.java  LoaderChannel.java  Prepared.java  ServerConfig.java
java/src/main/java/sparkmc/net/: FabricProvider.java  ForgeProvider.java  Http.java  NeoForgeProvider.java  NetUtil.java  PaperProvider.java  Provider.java  Providers.java  PurpurProvider.java  RequiredJava.java  VanillaProvider.java
java/src/main/java/sparkmc/util/: Ansi.java  Reporter.java  Util.java
rust/: Cargo.toml  README.md
rust/src/: commands.rs  console.rs  event.rs  java.rs  main.rs  plan.rs  setup.rs  term.rs  update.rs  util.rs  wizard.rs
rust/src/model/: channel.rs  config.rs  core.rs  flags.rs  mod.rs
rust/src/net/: fabric.rs  forge.rs  mod.rs  neoforge.rs  paper.rs  purpur.rs  vanilla.rs
