[package]
name = "sparkmc"
version = "0.1.0"
edition = "2021"
authors = ["T1REI"]
description = "sparkmc - fast and lightweight Minecraft server setup & console"

[dependencies]
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
